--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -184,17 +184,16 @@ jobs:
           mkdir -p ./${RUNNER_ASSET_DIR}
           sftp -p ${SSH_USER}:${REPO_LOGS_DIR}/* ${RUNNER_ASSET_DIR}
 
-      - name: Check Runner Directory
-        env:
-          RUNNER_ASSET_DIR: ./${{ env.TEST_RUNNER_ASSETS_DIR }}/${{ env.TEST_RUNNER_ASSETS_INFRA_DIR }}/${{ env.TEST_REPO_INFRA_LOGS_DIR }}
-        run: |
-          echo "where am i and what is here"
-          pwd
-          ls -la
-          echo "what is in the runner asset dir?"
-          echo "RUNNER_ASSET_DIR=${RUNNER_ASSET_DIR}"
-          ls -la ${RUNNER_ASSET_DIR}
-
+      # - name: Check Runner Directory
+      #   env:
+      #     RUNNER_ASSET_DIR: ./${{ env.TEST_RUNNER_ASSETS_DIR }}/${{ env.TEST_RUNNER_ASSETS_INFRA_DIR }}/${{ env.TEST_REPO_INFRA_LOGS_DIR }}
+      #   run: |
+      #     echo "where am i and what is here"
+      #     pwd
+      #     ls -la
+      #     echo "what is in the runner asset dir?"
+      #     echo "RUNNER_ASSET_DIR=${RUNNER_ASSET_DIR}"
+      #     ls -la ${RUNNER_ASSET_DIR}
 
       - name: Archive Infra Apply logs
         env:
@@ -204,16 +203,13 @@ jobs:
           name: infra-apply-logs
           path: ${{ env.RUNNER_ASSET_DIR }}
           if-no-files-found: error
-            
-      # - name: DEBUG - end fail
-      #   run: exit 1    
 
       - name: Check - Infra Apply - FAILED
         if: ${{ failure() }}
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
         run: |
-          echo "TEST FAILED"
+          echo "Infra Apply - FAILED"
           echo "$JOB_CONTEXT"
           exit 1
 
