--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -172,10 +172,11 @@ jobs:
               cd "${TEST_CONTROLLER_REPO_DIR}/${TEST_REPO_INFRA_DIR}" && \
               ./${TEST_REPO_INFRA_APPLY_SCRIPT}
           "
-        continue-on-error: true
+        # continue-on-error: true
         # timeout-minutes: 120
     
       - name: Controller - Infra Apply - Download Logs 
+        if: always()
         env:
           SSH_USER: ${{ env.TEST_VM_ADMIN_USERNAME }}
           REPO_LOGS_DIR: ${{ env.TEST_CONTROLLER_REPO_DIR }}/${{ env.TEST_REPO_INFRA_DIR }}/${{ env.TEST_REPO_INFRA_LOGS_DIR }}
@@ -196,6 +197,7 @@ jobs:
       #     ls -la ${RUNNER_ASSET_DIR}
 
       - name: Archive Infra Apply logs
+        if: always()
         env:
           RUNNER_ASSET_DIR: ./${{ env.TEST_RUNNER_ASSETS_DIR }}/${{ env.TEST_RUNNER_ASSETS_INFRA_DIR }}/${{ env.TEST_REPO_INFRA_LOGS_DIR }}
         uses: actions/upload-artifact@v2
@@ -204,20 +206,21 @@ jobs:
           path: ${{ env.RUNNER_ASSET_DIR }}
           if-no-files-found: error
 
-      - name: Check - Infra Apply - FAILED
-        if: ${{ failure() }}
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: |
-          echo "Infra Apply - FAILED"
-          echo "$JOB_CONTEXT"
-          exit 1
+      # - name: Check - Infra Apply - FAILED
+      #   if: ${{ failure() }}
+      #   env:
+      #     JOB_CONTEXT: ${{ toJson(job) }}
+      #   run: |
+      #     echo "Infra Apply - FAILED"
+      #     echo "$JOB_CONTEXT"
+      #     exit 1
 
 
       # start the test runs
       # download test-results
       # teardown infra
       # teardown azure controller
+      # if not, clean it up
 
 ###
 # The End.
