--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -206,14 +206,14 @@ jobs:
           path: ${{ env.RUNNER_ASSET_DIR }}
           if-no-files-found: error
 
-      - name: Check - Infra Apply - FAILED
-        if: ${{ failure() }}
+      - name: Check - Infra Apply - FAILED - Create Issue
+      # https://github.com/JasonEtco/create-an-issue
+        if: failure()
+        uses: JasonEtco/create-an-issue@v2
         env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: |
-          echo "Infra Apply - FAILED"
-          echo "$JOB_CONTEXT"
-
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          filename: .github/failed-test-template.md
 
       # start the test runs
       # download test-results
