--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,7 +7,8 @@ name: Run Tests
 on:
   push:
     branches:
-      - feature-wf-test-1
+      - 'feature-wf-test**'
+      # - feature-wf-test-1
   pull_request: 
     types: [opened, reopened]
     branches:
@@ -212,8 +213,11 @@ jobs:
         uses: JasonEtco/create-an-issue@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REF: ${{ github.repository }}/${{ github.ref }} 
         with:
           filename: .github/failed-test-template.md
+
+          https://github.com/solace-iot-team/solace-ci-controller/suites/1414745298/artifacts/23659360
 
       # start the test runs
       # download test-results
