--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,6 @@ on:
   push:
     branches:
       - 'feature-wf-test**'
-      # - feature-wf-test-1
   pull_request: 
     types: [opened, reopened]
     branches:
@@ -21,8 +20,10 @@ env:
   TEST_ZONE: "1"
   TEST_VM_ADMIN_USERNAME: "controller"
   TEST_AZURE_PROJECT: "solace-ctrller"
-  TEST_AZURE_DEPLOY_ARM_TEMPLATE: "./azure/.workflows/azure-deploy.json"
-  TEST_BOOTSTRAP_SH: "./azure/.workflows/bootstrap.sh"
+  # TEST_AZURE_DEPLOY_ARM_TEMPLATE: "./azure/.workflows/azure-deploy.json"
+  # TEST_BOOTSTRAP_SH: "./azure/.workflows/bootstrap.sh"
+  TEST_AZURE_DEPLOY_ARM_TEMPLATE: ".github/azure-deploy-controller.json"
+  TEST_BOOTSTRAP_SH: ".github/bootstrap-controller.sh"
   TEST_RUNNER_ASSETS_DIR: remote-assets
   TEST_RUNNER_ASSETS_INFRA_DIR: infra
   TEST_CONTROLLER_REPO_DIR: ${{ github.repository }}/${{ github.ref }} 
@@ -143,12 +144,6 @@ jobs:
       #   run: |
       #     echo "${{toJson(steps.azure_deploy.outputs)}}"
 
-
-#     {github.repository} = solace-iot-team/solace-ci-controller
-#     {github.ref} = refs/heads/feature-wf-test-1
-#     {github.event.repository.name}=solace-ci-controller
-#     {github.event.repository.master_branch} = main
-
       - name: Controller - Get Repo Ref
         env:
           CLONE_URL: ${{ github.event.repository.clone_url }}
@@ -173,8 +168,6 @@ jobs:
               cd "${TEST_CONTROLLER_REPO_DIR}/${TEST_REPO_INFRA_DIR}" && \
               ./${TEST_REPO_INFRA_APPLY_SCRIPT}
           "
-        # continue-on-error: true
-        # timeout-minutes: 120
     
       - name: Controller - Infra Apply - Download Logs 
         if: always()
@@ -214,6 +207,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REF: ${{ github.repository }}/${{ github.ref }} 
+          WORKFLOW: ${{ github.workflow }}
+          JOB: ${{ github.job }}
+          EVENT_NAME: ${{ github.event_name }}
         with:
           filename: .github/failed-test-template.md
 
